k8s/components/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ona-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
      - ona.assistent.cat
      secretName: ona-certificate
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ona-frontend
          servicePort: 80
      - path: /ws/
        backend:
          serviceName: ona-backend
          servicePort: 5678
